overflow css fixed

--- a/src/app/Components/home/home.component.scss
+++ b/src/app/Components/home/home.component.scss
@@ -6,3 +6,8 @@
 .paddingLess{
     padding: 0px 100px 0px 100px;
 }
+
+.heightLimit{
+    max-height: 400px;
+    overflow-y: scroll;
+}
