--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,3 +57,41 @@
 .buttonSpace {
   margin: 5px;
 }
+
+
+/* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
+/** {
+  scrollbar-width: thin;
+  scrollbar-color: #397524 #DFE9EB;
+}*/
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 8px;
+  width: 8px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 0px;
+  background-color: #222;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #222;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #222;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #0c0;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(2, 219, 2);
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #0c0;
+}
